# SoBundle

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: appdir.rs  linker.rs  main.rs
